<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_login">Login</string>
    <string name="auth_password">Password</string>
    <string name="auth_save_credentials">Save credentials</string>


    <string name="auth_sign_up">Sign Up</string>
    <string name="auth_repeat_password">Repeat password</string>

    <string name="auth_sign_up_email_incorrect">Email is incorrect or user has already registered</string>
    <string name="auth_sign_up_password_incorrect">Please enter a valid password. It should has at least 8 chars</string>

    <string name="auth_sign_in_credentials_incorrect">Email or password is incorrect</string>

    <string name="logout_intention_question">Do you want to log out?</string>
    <string name="logout">Log out</string>

    <string name="sign_up_button_text">Don\'t have an account yet? Sign Up</string>
    <string name="sign_in_button_text">Already have an account? Sign in.</string>
</resources>